core/cu29_derive/tests/compile_fail/copper_runtime/ignore_resources_without_sim_mode.rs
use cu29_derive::copper_runtime;

#[copper_runtime(
    config = "config/ignore_resources_sim_mode_valid.ron",
    ignore_resources = true
)]
struct App {}

fn main() {}
